tests/baselines/reference/objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints2.errors.txt
==== tests/cases/compiler/objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints2.ts (14 errors) ====
    // Two call or construct signatures are considered identical when they have the same number of type parameters and, considering those 
    // parameters pairwise identical, have identical type parameter constraints, identical number of parameters with identical kind(required, 
    // optional or rest) and types, and identical return types.
    
    class A {
        foo<T extends U, U extends Date>(x: T, y: U): string { return null; }
            ~~~~~~~~~~~
!!! objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints2.ts(6,9): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    }
    
    class B<T extends U, U extends Array<number>> {
            ~~~~~~~~~~~
!!! objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints2.ts(9,9): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
        foo(x: T, y: U): string { return null; }
    }
    
    class C<T extends U, U extends String> {
            ~~~~~~~~~~~
!!! objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints2.ts(13,9): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
        foo(x: T, y: U): string { return null; }
    }
    
    class D<T extends U, U extends Number> {
            ~~~~~~~~~~~
!!! objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints2.ts(17,9): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
        foo(x: T, y: U): string { return null; }
    }
    
    interface I<T extends U, U extends Number> {
                ~~~~~~~~~~~
!!! objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints2.ts(21,13): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
        foo(x: T, y: U): string;
    }
    
    interface I2 {
        foo<T extends U, U extends Boolean>(x: T, y: U): string;
            ~~~~~~~~~~~
!!! objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints2.ts(26,9): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    }
    
    var a: { foo<T extends U, U extends Array<string>>(x: T, y: U): string }
                 ~~~~~~~~~~~
!!! objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints2.ts(29,14): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    var b = { foo<T extends U, U extends RegExp>(x: T, y: U) { return ''; } };
                  ~~~~~~~~~~~
!!! objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints2.ts(30,15): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    
    function foo1(x: A);
    function foo1(x: A); // error
    ~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints2.ts(33,1): error TS2144: Duplicate overload signature for 'foo1'.
    function foo1(x: any) { }
    
    function foo1b(x: B<Array<number>, Array<number>>);
    function foo1b(x: B<Array<number>, Array<number>>); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints2.ts(37,1): error TS2144: Duplicate overload signature for 'foo1b'.
    function foo1b(x: any) { }
    
    function foo1c(x: C<String, String>);
    function foo1c(x: C<String, String>); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints2.ts(41,1): error TS2144: Duplicate overload signature for 'foo1c'.
    function foo1c(x: any) { }
    
    function foo2(x: I<Number, Number>);
    function foo2(x: I<Number, Number>); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints2.ts(45,1): error TS2144: Duplicate overload signature for 'foo2'.
    function foo2(x: any) { }
    
    function foo3(x: typeof a);
    function foo3(x: typeof a); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints2.ts(49,1): error TS2144: Duplicate overload signature for 'foo3'.
    function foo3(x: any) { }
    
    function foo4(x: typeof b);
    function foo4(x: typeof b); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints2.ts(53,1): error TS2144: Duplicate overload signature for 'foo4'.
    function foo4(x: any) { }
    
    function foo5(x: A);
    function foo5(x: B<Array<number>, Array<number>>); // ok
    function foo5(x: any) { }
    
    function foo5b(x: A);
    function foo5b(x: C<String, String>); // ok
    function foo5b(x: any) { }
    
    function foo5c(x: C<String, String>);
    function foo5c(x: D<Number, Number>); // ok
    function foo5c(x: any) { }
    
    function foo6c(x: C<String, String>);
    function foo6c(x: D<any, Number>); // error, "any" does not satisfy the constraint
    function foo6c(x: any) { }
    
    function foo6(x: A);
    function foo6(x: I<Number, Number>); // ok
    function foo6(x: any) { }
    
    function foo7(x: A);
    function foo7(x: typeof a); // ok
    function foo7(x: any) { }
    
    function foo8(x: B<Array<number>, Array<number>>);
    function foo8(x: I<Number, Number>); // ok
    function foo8(x: any) { }
    
    function foo9(x: B<Array<number>, Array<number>>);
    function foo9(x: C<String, String>); // ok
    function foo9(x: any) { }
    
    function foo10(x: B<Array<number>, Array<number>>);
    function foo10(x: typeof a); // ok
    function foo10(x: any) { }
    
    function foo11(x: B<Array<number>, Array<number>>);
    function foo11(x: typeof b); // ok
    function foo11(x: any) { }
    
    function foo12(x: I<Number, Number>);
    function foo12(x: C<String, String>); // ok
    function foo12(x: any) { }
    
    function foo12b(x: I2);
    function foo12b(x: C<String, String>); // ok
    function foo12b(x: any) { }
    
    function foo13(x: I<Number, Number>);
    function foo13(x: typeof a); // ok
    function foo13(x: any) { }
    
    function foo14(x: I<Number, Number>);
    function foo14(x: typeof b); // ok
    function foo14(x: any) { }
    
    function foo15(x: I2);
    function foo15(x: C<String, String>); // ok
    function foo15(x: any) { }